# JUSTC

./: .gitignore  CMakeLists.txt  README.md  example.justc  justc.hpp
.github/workflows/: compile.yml  test.yml  wasm.yml
browsers/: compile.sh  core.js  just.config.js
core/: browsers.cpp  fetch.cpp  fetch.h  from.json.cpp  from.json.hpp  from.justo.cpp  import.cpp  import.hpp  interpreter.cpp  interpreter.h  js.cpp  json.cpp  json.hpp  json_serializer.cpp  json_serializer.h  justb.cpp  justb.hpp  justo.hpp  keywords.cpp  keywords.h  lexer.cpp  lexer.emscripten.h  lexer.h  lib.cpp  lib.hpp  luawrapper.c  luawrapper.h  main.cpp  number.hpp  parser.cpp  parser.emscripten.h  parser.h  run.js.cpp  run.js.hpp  run.lua.cpp  run.lua.hpp  run.luau.cpp  to.json.cpp  to.json.h  to.xml.cpp  (+9 more)
core/built-in/: s.hpp
core/built-in/binary/: binary.cpp  binary.hpp
core/built-in/math/: math.cpp  math.hpp
core/built-in/string/: string.cpp  string.hpp
core/entry/: capi.cpp  capi.hpp  cli.cpp  codec.cpp  codec.hpp  jsapi.cpp  justc.hpp  lib.hpp
javascript/: cli.js  compile.sh  compress.js  core.js  install_luau.sh  just.config.js  monaco.js  npm.js  npm.json  test.css  test.html  test.js  test.json  test.justo  test.lua
linux/: compile.sh
macos/: compile.sh
nodejs/: compile.sh
test/actions/: test.justc
test/browser/: index.html  justc.js  main.js
test/linux/: import.justc  justc.sh  luau.justc  test.json.json  test.justc
test/nodejs/: test.js
windows/: compile.ps1
